2005-10-16  Derek Price  <derek@ximbiot.com>

	* sanity.sh (crerepos): Remove CVS_CLIENT_LOG set while debugging.

2005-10-14  Derek Price  <derek@ximbiot.com>

	* sign.h: Protos for new signature API.
	* sign.c (init_signatures, set_sign_commits, set_sign_template,
	set_sign_textmode, add_sign_arg, get_sign_commits, get_signature): New
	signing API.
	(sign_args_list_to_args_proc, get_signature): Move from...
	* client.c (sign_args_list_to_args_proc): ...here...
	(send_signature): ...and here.
	(send_files): Only accept SEND_SIGNATURES flag to differentiate commit
	from other callers.
	(send_signature): Use new signing interface.
	(client_send_import_file): Send signatures.
	* client.h (send_files): Update proto.
	* add.c, admin.c, annotate.c, client.c, diff.c, edit.c, log.c, ls.c,
	remove.c, status.c, tag.c, update.c, watch.c: Change all callers.
	* commit.c (commit): Move sign arg handling to...
	* main.c (main): ...here.
	* server.c (serve_modified): Save signatures to a temp file.
	(serve_signature): Send error message on receipt of multiple sigs.

	* rcs.c: Test interface.
	* rcs.h: Protect against double-inclusion.
	(struct file_info): Move from...
	* cvs.h: ...here.  #include "run.h".
	* subr.c, subr.h: Include "rcs.h" to imporve interface.
	* run.c: #include "run.h".
	* run.h: New file.

	* gpg.c: Remove unsightly comments.

	* Makefile.am (cvs_SOURCES): Add gpg.c & gpg.h.
	* gpg.c, gpg.h: New files.
	* server.c (sig_buf): New global.
	(serve_signature): Extract signature correctly & store it.
	* buffer.c, root.c: #include buffer.h first, to test interface.
	* buffer.c (buf_read_data): Handle input from nonio (memory) buffers.
	* buffer.h, root.h: Protect against double inclusion.  #include enough
	headers to make interface standalone.

2005-10-11  Derek Price  <derek@ximbiot.com>

	* commit.c (commit_usage), main.c (opt_usage): Describe OpenPGP related
	options.

	* Makefile.am (cvs_SOURCES): Add sign.c & sign.h.